# app-hathor

./: .dev.Makefile  .lint.Makefile  CHANGELOG.md  Makefile  README.md  RELEASING.md  activate_bolos
.doxygen/: Doxyfile
.github/workflows/: ci-workflow.yml  lint-workflow.yml
doc/: COMMANDS.md  TOKEN.md  TRANSACTION.md  WALLET_DESKTOP.md
src/: constants.h  globals.c  globals.h  hathor.c  hathor.h  io.c  main.c  storage.c  storage.h  sw.h  types.h
src/apdu/: dispatcher.c
src/common/: bip32.c  bip32.h  buffer.c  buffer.h  format.c  format.h
src/handler/: get_address.c  get_version.c  get_xpub.c  reset_token_signatures.c  reset_token_signatures.h  send_token_data.c  send_token_data.h  sign_token_data.c  sign_token_data.h  sign_tx.c  verify_token_signature.c  verify_token_signature.h
src/helper/: send_response.c  send_response.h
src/token/: signature.c  signature.h  token_parser.c  types.h  (+1 more)
stubs/: cx.c  cx.h  mock_engine.h  os.c  os.h  ox.h  stubs.h
tests/: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  qa.py  requirements.txt  setup.cfg  speculos_entrypoint.py  test_address_cmd.py  test_custom_tokens_cmd.py  test_error_cmd.py  test_name_version.py  test_sign_cmd.py  test_status_word.py  test_tx_with_custom_token.py  test_version_cmd.py  test_xpub_cmd.py  utils.py
tests/app_client/: automation.py  button.py  cmd.py  cmd_builder.py  token.py  transaction.py  transport.py  utils.py
tests/app_client/exception/: __init__.py  device_exception.py  errors.py
unit-tests/: CMakeLists.txt  run_tests.sh  test_bip32.c  test_buffer.c  test_format.c
(+8 files in other folders)
